--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "start": "node server.js"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "mysql": "^2.18.1",
-    "body-parser": "^1.20.2",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5"
-  }
+"dependencies": {
+  "express": "^4.18.2",
+  "mysql": "^2.18.1",
+  "body-parser": "^1.20.2",
+  "bcryptjs": "^2.4.3",
+  "cors": "^2.8.5",
+  "jsonwebtoken": "^9.0.2"
+}
+
 }
