--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "node server.js"
   },
 "dependencies": {
-  "express": "^4.18.2",
-  "mysql": "^2.18.1",
-  "body-parser": "^1.20.2",
   "bcryptjs": "^2.4.3",
+  "body-parser": "^1.20.2",
   "cors": "^2.8.5",
-  "jsonwebtoken": "^9.0.2"
+  "express": "^4.18.2",
+  "jsonwebtoken": "^9.0.2",
+  "mysql": "^2.18.1",
+  "path": "^0.12.7"
 }
+
 
 }
