--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "start": "node server.js"
   },
 "dependencies": {
-  "bcryptjs": "^2.4.3",
-  "body-parser": "^1.20.2",
-  "cors": "^2.8.5",
+  "cookie-parser": "^1.4.6",
   "express": "^4.18.2",
-  "jsonwebtoken": "^9.0.2",
   "mysql": "^2.18.1",
-  "path": "^0.12.7"
+  "bcryptjs": "^2.4.3",
+  "jsonwebtoken": "^9.0.0",
+  "cors": "^2.8.5",
+  "body-parser": "^1.20.2"
 }
+
 
 
 }
