--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "scripts": {
     "start": "node server.js"
   },
-"dependencies": {
-  "cookie-parser": "^1.4.6",
-  "express": "^4.18.2",
-  "mysql": "^2.18.1",
-  "bcryptjs": "^2.4.3",
-  "jsonwebtoken": "^9.0.0",
-  "cors": "^2.8.5",
-  "body-parser": "^1.20.2"
+ "dependencies": {
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "body-parser": "^1.20.2",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
+    "cookie-parser": "^1.4.6"
 }
 
 
