--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
  "dependencies": {
     "express": "^4.18.2",
     "mysql": "^2.18.1",
+   "helmet": "^7.1.0",
     "body-parser": "^1.20.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
