--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node server.js"
   },
+  "scripts": {
+  "start": "node server.js",
+  "postinstall": "npm rebuild bcrypt --build-from-source"
+},
  "dependencies": {
     "express": "^4.18.2",
     "mysql": "^2.18.1",
